Added button to html; added in render function for questions.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
                 </div>
             </div>
         </div>
-        <div class="timer"></div>
-        <form>
-            <div class="question">She helped create the beginnings of Bluetooth and Wifi technology?</div>
-            <input type="radio" name="question" id="hedyLamarr">Hedy Lamarr
-            <input type="radio" name="question" id="graceHopper">Grace Hopper
+        <div class="btn btn-primary btn-lg" id="startBtn">Start</div>
+        <div id="timeRemaining"></div>
+        <form id="triviaQuestions">
         </form>
         <!-- <div class="row game">
             <div class="col-md">
@@ -34,8 +32,8 @@
         </div> -->
     </div>
 
-
-    <script type="text/javascript" src="assets/javascript/game.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script>
 
 </body>
 
