Added submit button after questions; created function to return answer values.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </div>
 
             <div id="timeRemaining"></div>
-            <div id="triviaQuestions">
-            </div>
+            <div id="triviaQuestions"></div>
+            <div id="btn"></div>
         </section>
         <!-- <div class="row game">
             <div class="col-md">
