Added code to compare user's answer to answer for question.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div id="timeRemaining"></div>
             <div id="triviaQuestions"></div>
             <div id="btn"></div>
+            <div id="allDone"></div>
         </section>
         <!-- <div class="row game">
             <div class="col-md">
